--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <table class="table" id="table2excel">
-    <img src="" alt="Hinh logo">
+    <img src="./logo.png" alt="Hinh logo">
     <thead class="thead-dark">
       <tr>
 
