--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <table class="table" id="table2excel">
+  <table border="1" class="table" id="table2excel">
     <img src="./logo.png" alt="Hinh logo">
     <thead class="thead-dark">
       <tr>
