--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 
 <head>
-  <title>Trang Chính</title>
+  <title>Xuat Noi Dung</title>
+  <!-- Favicon-->
+  <link rel="icon" type="image/x-icon" href="./logo.png" />
+  <!-- Font Awesome icons (free version)-->
+  <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+    type="text/css" />
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
